--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -2,9 +2,12 @@
   box-sizing: border-box;
   background-color: rgba(0, 0, 0, 0.7); 
   width: 100%;
-  padding: 40px 62px;
+  padding: 40px 100px;
 }
 
+.MNEN.active{
+  color : orange;
+}
 
 .navContainer {
   justify-content: space-between;
@@ -25,11 +28,12 @@
 
 .navLinks {
   align-items: center;
-  gap: 65px;
+  gap: 75px;
   display: flex;
   list-style: none;
   padding: 0;
   margin: 0;
+  margin-right : 40px;
 }
 
 .navItem {
