--- a/src/pages/HomePage/homePage.css
+++ b/src/pages/HomePage/homePage.css
@@ -124,3 +124,9 @@
   justify-content: space-between;
   margin: 0 auto;
 }
+[data-inview] {
+  transition: all 0.6s ease-out;
+}
+html {
+  scroll-behavior: smooth;
+}
