--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,29 +1,28 @@
 .header {
   box-sizing: border-box;
-  background-color: rgba(0, 0, 0, 0.7); 
+  background-color: rgba(0, 0, 0, 0.7);
   width: 100%;
   padding: 40px 100px;
 }
 
-.MNEN.active{
-  color : orange;
+.MNEN.active {
+  color: orange;
 }
 
 .navContainer {
   justify-content: space-between;
   align-items: center;
-  width: 1300px;
+  width: 100%;
+  max-width: 1300px;
   margin: 0 auto;
   display: flex;
   position: relative;
-
 }
 
 .logo {
-  margin-right : 40px;
+  margin-right: 40px;
   width: 128px;
   height: 28px;
-
 }
 
 .navLinks {
@@ -33,7 +32,7 @@
   list-style: none;
   padding: 0;
   margin: 0;
-  margin-right : 40px;
+  margin-right: 40px;
 }
 
 .navItem {
@@ -63,27 +62,16 @@
   cursor: pointer;
   padding: 0;
 }
+@media(min-width : 320px){
 
-@media (width <= 991px) {
-  .header {
-    padding: 30px;
-  }
 }
-
-@media (width <= 640px) {
+@media(min-width : 480px){
+  
+}
+@media (max-width: 640px) {
   .header {
     padding: 20px;
   }
-}
-
-@media (width <= 991px) {
-  .navLinks {
-    gap: 30px;
-  }
-}
-
-
-@media (width <= 640px) {
   .navLinks {
     position: absolute;
     top: 70px;
@@ -103,13 +91,27 @@
   .navItem {
     padding: 10px 0;
   }
-}
 
-@media (width <= 640px) {
   .navContainer {
     flex-wrap: wrap;
   }
+
   .mobileMenuButton {
     display: block;
   }
+}
+@media(min-width : 768px){
+  
+}
+@media (max-width: 991px) {
+  .header {
+    padding: 30px;
+  }
+
+  .navLinks {
+    gap: 30px;
+  }
+}
+@media(min-width : 1024px){
+  
 }
