--- a/src/pages/HomePage/homePage.css
+++ b/src/pages/HomePage/homePage.css
@@ -130,3 +130,20 @@
 html {
   scroll-behavior: smooth;
 }
+
+@media(min-width : 320px){
+
+}
+@media(min-width : 480px){
+  
+}
+@media (max-width: 640px) {
+}
+@media(min-width : 768px){
+  
+}
+@media (max-width: 991px) {
+}
+@media(min-width : 1024px){
+  
+}
